--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "This is the development of the final challenge provided by Jumpcut",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Abhishek Kothari",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.4",
+    "mocha": "^5.2.0"
+  }
 }
